<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Karrency</string>
  <string name="action_about">About</string>
  <string name="action_sync">Sync</string>
  <string name="calc">Calculator</string>
  <string name="configure_widget">Configure Widget</string>

  <!-- Currency Label -->
  <string name="usd_fulltext">USD - US Dollar</string>
  <string name="sgd_fulltext">SGD - Singapore Dollar</string>
  <string name="eur_fulltext">EURO - Euro</string>
  <string name="myr_fulltext">MYR - Malaysian Ringgit</string>
  <string name="gbp_fulltext">GBP - British Pound Sterling</string>
  <string name="thb_fulltext">THB - Thai Baht</string>
  <string name="usd">USD</string>
  <string name="sgd">SGD</string>
  <string name="eur">EUR</string>
  <string name="myr">MYR</string>
  <string name="gbp">GBP</string>
  <string name="thb">THB</string>
  <string name="usd_dummy">900 Kyats</string>
  <string name="sgd_dummy">700 Kyats</string>
  <string name="euro_dummy">1,300 Kyats</string>
  <string name="myr_dummy">290 Kyats</string>
  <string name="gbp_dummy">1,500 Kyats</string>
  <string name="thb_dummy">30 Kyats</string>
  <string name="currencies">Currencies</string>
  <string name="rate">Rate</string>
  <string name="about">About</string>
  <string name="about_body">
    <![CDATA[
        <b>Karrency</b><br>
        Version %s<br><br>
        A simple exchange rate checker and calculator.
        Data is provided from Central Bank of Myanmar Official API
        <hr>
        <br>
        <br>
        Open Source Libraries in Use
        <ul>
          <li> - butterknife by Jake Wharton </li>
        </ul>
    ]]>
  </string>
  <string name="no_connection">Could not refresh data. Please check your connection.</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="sync_time">Last synced time - %s</string>

  <!-- Converter -->
  <string name="enter_amount">Enter Amount</string>
  <string name="dummy_result">Dummy Result</string>
  <string name="label_select_currency">Select Currency</string>
  <string name="label_enter_amount">Enter Amount</string>
  <string name="label_mmk">MMK</string>
  <string name="calculate">Calculate</string>
  <string name="from">From</string>
  <string name="to">To</string>
  <string name="change">Change</string>

  <!-- Widget -->
  <string name="add_widget">Add widget</string>
  <string name="widget_refresh">Refresh</string>
  <string name="widget_configure">Configure</string>

</resources>
